@@ -19,7 +19,6 @@ package org.operaton.bpm.engine.test.api.runtime;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.fail;
 
-import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -40,7 +39,6 @@ import org.operaton.bpm.engine.test.util.ProvidedProcessEngineRule;
 import org.operaton.bpm.model.bpmn.Bpmn;
 import org.operaton.bpm.model.bpmn.BpmnModelInstance;
 import org.junit.After;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
@@ -246,7 +244,7 @@ public class RestartProcessInstanceUserOperationLogTest {
     runtimeService.deleteProcessInstance(processInstance.getId(), "test");
     runtimeService.restartProcessInstances(processDefinition.getId())
       .startAfterActivity("user1")
-      .processInstanceIds(Arrays.asList(processInstance.getId()))
+      .processInstanceIds(List.of(processInstance.getId()))
       .executeAsync();
 
     // when
@@ -265,7 +263,7 @@ public class RestartProcessInstanceUserOperationLogTest {
     runtimeService.deleteProcessInstance(processInstance.getId(), "test");
     runtimeService.restartProcessInstances(processDefinition.getId())
       .startAfterActivity("user1")
-      .processInstanceIds(Arrays.asList(processInstance.getId()))
+      .processInstanceIds(List.of(processInstance.getId()))
       .executeAsync();
 
     rule.getProcessEngineConfiguration().setRestrictUserOperationLogToAuthenticatedUsers(false);
